<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/label_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_label_in"
        android:textColor="@color/white"
        android:textSize="@dimen/record_label_fontsize"
        app:layout_constraintBottom_toTopOf="@id/value_in_date"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left_vertical"
        app:layout_constraintRight_toLeftOf="@id/guideline_center_vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/value_in_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2000/01/01"
        android:textColor="@color/white"
        android:textSize="@dimen/record_date_value_fontsize"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left_vertical"
        app:layout_constraintRight_toLeftOf="@id/guideline_center_vertical"
        app:layout_constraintTop_toBottomOf="@id/label_in"
        app:layout_constraintBottom_toTopOf="@id/value_in_time"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/value_in_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10:00"
        android:textColor="@color/white"
        android:textSize="@dimen/record_time_value_fontsize"
        app:layout_constraintBottom_toTopOf="@id/button_in"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left_vertical"
        app:layout_constraintRight_toLeftOf="@id/guideline_center_vertical"
        app:layout_constraintTop_toBottomOf="@id/value_in_date" />

    <TextView
        android:id="@+id/label_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_label_out"
        android:textColor="@color/white"
        android:textSize="@dimen/record_label_fontsize"
        app:layout_constraintBottom_toTopOf="@id/value_out_date"
        app:layout_constraintLeft_toRightOf="@id/guideline_center_vertical"
        app:layout_constraintRight_toRightOf="@id/guideline_right_vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/value_out_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/record_date_value_fontsize"
        android:text="2000/01/01"
        app:layout_constraintBottom_toTopOf="@id/value_out_time"
        app:layout_constraintLeft_toLeftOf="@id/guideline_center_vertical"
        app:layout_constraintRight_toRightOf="@id/guideline_right_vertical"
        app:layout_constraintTop_toBottomOf="@id/label_out" />

    <TextView
        android:id="@+id/value_out_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/record_time_value_fontsize"
        android:text="19:00"
        app:layout_constraintBottom_toTopOf="@id/button_out"
        app:layout_constraintLeft_toLeftOf="@id/guideline_center_vertical"
        app:layout_constraintRight_toRightOf="@id/guideline_right_vertical"
        app:layout_constraintTop_toBottomOf="@id/value_out_date" />

    <TextView
        android:id="@+id/button_in"
        android:layout_width="@dimen/record_button_size"
        android:layout_height="@dimen/record_button_size"
        android:background="@drawable/button_in"
        android:gravity="center"
        android:text="@string/record_button_label_in"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/record_button_fontsize"
        android:elevation="@dimen/record_button_elevation"
        app:layout_constraintRight_toRightOf="@id/guideline_center_vertical"
        app:layout_constraintLeft_toLeftOf="@id/guideline_left_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/button_out"
        android:layout_width="@dimen/record_button_size"
        android:layout_height="@dimen/record_button_size"
        android:background="@drawable/button_out"
        android:gravity="center"
        android:text="@string/record_button_label_out"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/record_button_fontsize"
        android:elevation="@dimen/record_button_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline_right_vertical"
        app:layout_constraintLeft_toLeftOf="@id/guideline_center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/insert_dummy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="ダミーデータ追加"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/delete_all_data" />

    <Button
        android:id="@+id/delete_all_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="データ全削除"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/insert_dummy"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_left_vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_right_vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</android.support.constraint.ConstraintLayout>